Home page display
DONE:
Work in progress

TO DO:
DAO + WebService for content page
Erase values from input fields once inserted in database (coded but don't work)
need to add Read Update Delete and Find All web services

--- a/web/bower.json
+++ b/web/bower.json
@@ -5,6 +5,7 @@
         "angular": "*",
         "angular-ui-router": "*",
         "bootstrap": "*",
-        "normalize.css": "*"
+        "normalize.css": "*",
+        "angular-material": "*"
     }
 }
